web/app/themes/ppj/src/sass/components/footer.sass
.footer
  background-color: $color-very-dark
  color: $color-white
  font-size: 1.6rem
  line-height: 2.6rem
  padding: $common-spacing

  @include bp('portrait')
    font-size: 1.8rem
    line-height: 2.6rem

  @include bp('landscape')
    font-size: 2.4rem
    line-height: 2.6rem
    padding: $common-spacing * 2

  @include bp('large')
    font-size: 2.8rem
    line-height: 2.6rem

  &__container

  li
    margin-bottom: $common-spacing
    text-decoration: underline

    & > a
      color: $color-white

  &__copyright
    margin-top: $common-spacing * 2
    color: $color-white

  &__logo
    height: 6.4rem
    margin-top: $common-spacing * 2
    width: 15rem
    @include background-img('svg/logo.svg')

.facebook-footer
  background-color: $color-dark-section
  color: $color-white
  font-size: 1.6rem
  line-height: 2.6rem
  padding: $common-spacing

  @include bp('portrait')
    font-size: 1.8rem
    line-height: 2.6rem

  @include bp('landscape')
    font-size: 2.4rem
    line-height: 2.6rem
    padding: $common-spacing * 2

  @include bp('large')
    font-size: 2.8rem
    line-height: 2.6rem

  a
    color: inherit
    text-decoration: underline

  &__container
    display: flex

  &__content
    margin-left: $common-spacing

    @include bp('landscape')
      margin-left: $common-spacing * 2

  &__icon
    width: 3.2rem

    @include bp('portrait')
      width: 5.2rem

    @include bp('landscape')
      width: 4rem

    @include bp('large')
      width: 7.2rem

    & path
      fill: currentColor

.page-template-find-a-job
  @include bp('portrait')

    .footer
      font-size: 1.6rem
      padding: $common-spacing

      &__container
        display: flex
        justify-content: center

      &__nav-links
        display: flex

      &__nav-link, &__copyright
        margin: 0 0 0 $common-spacing

      &__nav-link > *, &__copyright > *
        border-left: 1px solid $color-light
        display: block
        height: 100%
        line-height: 1
        padding-left: $common-spacing
        text-align: center

      &__nav-link:first-child > *
        border-left: none

